--- a/src/components/screens/about/index.scss
+++ b/src/components/screens/about/index.scss
@@ -3,17 +3,23 @@
   flex-direction: column;
   width: 33%;
   height: 100vh;
-  background: black;
+
   align-items: center;
   color: white;
 .img-profil{
   width: 50%;
   border-radius: 4px;
 }
+.img-wrap{
 
+  width: 100%;
+  text-align: center;
+  background: white;
+}
 .text-wrapper{
   text-align: center;
   padding: 8%;
+  color: rgb(98, 98, 98);
 }
 
 .description{
@@ -40,5 +46,65 @@ p{
   width: 100%;
   height: 80vh;
 }
+
+
+
+// .area{
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+   
+// }
+.container{
+  position: relative;
+  margin: 30px 0px;
+  overflow: hidden;
+}
+.image{
+  height: 460px;
+  width: 320px;
+  background: url("../../../assets/profil.jpg") no-repeat;
+  z-index: -2;
+}
+
+.name{
+  top: -100px;
+  position: absolute;
+  background: rgb(58, 218, 196);
+  padding: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+  transition: 1s;
+  
+/*   z-index: -1; */
+}
+
+.container:hover .name{
+  
+  transform: translateX(150px) translateY(450px);
+/*   z-index: 1; */
+  
+}
+
+// .name-bg{
+//   position: absolute;
+//   background: rgba(255, 255, 255, .5);
+//   height: 60px;
+//   width: 180px;
+//   bottom: 0;
+//   left: 70px;
+//   z-index:1 ;
+//   transition: 1s;
+//   transform: perspective(400px) rotateY(-90deg);
+//   transform-origin: left;
+// }
+
+.container:hover .name-bg{
+  transform: perspective(400px) rotateY(0deg);
+  z-index: -1;
+}
+
 
 }
