--- a/src/components/screens/interprojects/index.scss
+++ b/src/components/screens/interprojects/index.scss
@@ -1,20 +1,17 @@
 .InterProj{
   display: flex;
   width: 33%;
-  background-color: black;
 
   .wrapper{
     width: 100%;
     height: 100%;
-    color: white;
+    color: rgb(98, 98, 98);
     font-size: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .wrapper:hover{
-    background-color: rgba(117, 97, 97, 0.664);
-  }
+
   a{
     align-self: center;
     text-decoration: none;
@@ -22,6 +19,39 @@
     width: 100%;
     height: 100%;
   }
+   a {
+		border: 1px solid rgba(0,0,0,0);
+		overflow: hidden;
+		position: relative;
+	}
+  a:hover{
+    text-decoration: none;
+  }
+ a:after,
+ a:before {
+		background: rgba(0,170,0,.1);
+		content: ' ';
+		display: block;
+		height: 100%;
+		position: absolute;
+		transform: skewX(-90deg);
+		-webkit-transform: skewX(-135deg);
+		width: 0;
+		z-index: 0;
+	}
+ a:after {
+		bottom: 0;
+		right: -20%;
+	}
+ a:before {
+		top: 0;
+		left: -20%;
+	}
+
+ a:hover:after,
+ a:hover:before {
+		width: 150%;
+	}
 
   @media screen and (min-width : 768px) and (max-width : 1024px) {
   width: 100%;
