--- a/src/components/screens/intercv/index.scss
+++ b/src/components/screens/intercv/index.scss
@@ -11,21 +11,21 @@
     align-items: center;
   }
 
-  a{
-    align-self: center;
-    text-decoration: none;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
+
    a {
 		border: 1px solid rgba(0,0,0,0);
 		overflow: hidden;
 		position: relative;
     text-decoration: none;
+    align-self: center;
+    text-decoration: none;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 	}
   a:hover{
     text-decoration: none;
+    transition: 1.2s;
   }
  a:after,
  a:before {
@@ -59,11 +59,13 @@
 
   @media screen and (min-width : 768px) and (max-width : 1024px) {
     width: 100%;
-    height: 30vh;
+    height: 40vh;
+    margin-top: 145px;
 
 }
 @media screen and (max-width: 480px) {
   width: 100%;
-  height: 15vh;
+  height: 25vh;
+  margin-top: 220px
 }
 }
