--- a/src/components/screens/interprojects/index.scss
+++ b/src/components/screens/interprojects/index.scss
@@ -29,7 +29,7 @@
   }
  a:after,
  a:before {
-		background: rgba(0,170,0,.1);
+		background: rgba(0, 16, 83, 0.1);
 		content: ' ';
 		display: block;
 		height: 100%;
