--- a/src/components/screens/about/index.scss
+++ b/src/components/screens/about/index.scss
@@ -12,7 +12,8 @@
 }
 .job{
   font-weight: bold;
-  color: rgb(117, 194, 181);
+  color: rgb(11, 19, 134);
+  font-size: 20px;
 }
 .img-wrap{
 
@@ -26,7 +27,7 @@
   color: rgb(98, 98, 98);
 }
 .awssld{
-  --organic-arrow-color: rgb(117, 194, 181);
+  --organic-arrow-color: rgb(11, 19, 134);
 }
 .aws-sld__bullets {
   bottom: 10px;
@@ -34,7 +35,7 @@
   margin-top: 10px;
 }
 .awssld__bullets .awssld__bullets--active{
-  background: rgb(117, 194, 181);
+  background: rgb(11, 19, 134);
 }
 
 .awssld__content{
@@ -92,7 +93,7 @@ p{
 .name{
   top: -100px;
   position: absolute;
-  background: rgb(58, 218, 196);
+  background: rgb(11, 19, 134);
   padding: 10px;
   font-weight: 500;
   font-size: 18px;
