--- a/src/components/screens/intercv/index.scss
+++ b/src/components/screens/intercv/index.scss
@@ -66,6 +66,9 @@
 @media screen and (max-width: 480px) {
   width: 100%;
   height: 25vh;
-  margin-top: 220px
+  margin-top: 220px;
+  .wrapper{
+    font-size: 30px;
+  }
 }
 }
