--- a/src/components/screens/intercv/index.scss
+++ b/src/components/screens/intercv/index.scss
@@ -9,8 +9,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid black;
   }
-
 
    a {
 		border: 1px solid rgba(0,0,0,0);
@@ -66,9 +66,17 @@
 @media screen and (max-width: 480px) {
   width: 100%;
   height: 25vh;
-  margin-top: 220px;
+  margin-top: 130px;
   .wrapper{
     font-size: 30px;
   }
+  .button-cv{
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  max-width: 280px;
+  width: 220px;
+  text-align: center;
+}
 }
 }
