--- a/src/components/screens/intercv/index.scss
+++ b/src/components/screens/intercv/index.scss
@@ -1,7 +1,8 @@
 .Inter{
   display: flex;
   width: 33%;
-  .wrapper{
+
+    .wrapper{
     width: 100%;
     height: 100%;
     color: rgb(98, 98, 98);
@@ -12,41 +13,39 @@
     border: 1px solid black;
   }
 
-   a {
-		border: 1px solid rgba(0,0,0,0);
-		overflow: hidden;
-		position: relative;
-    text-decoration: none;
+
+   a{
     align-self: center;
     text-decoration: none;
     align-items: center;
     width: 100%;
     height: 100%;
+  }
+   a {
+		border: 1px solid rgba(0,0,0,0);
+		overflow: hidden;
+		position: relative;
 	}
   a:hover{
     text-decoration: none;
-    transition: 1.2s;
   }
  a:after,
  a:before {
 		background: rgba(0, 16, 83, 0.1);
 		content: ' ';
 		display: block;
-    text-decoration: none;
 		height: 100%;
 		position: absolute;
 		transform: skewX(-90deg);
-		-webkit-transform: skewX(-45deg);
+		-webkit-transform: skewX(-135deg);
 		width: 0;
 		z-index: 0;
 	}
  a:after {
-   text-decoration: none;
 		bottom: 0;
 		right: -20%;
 	}
  a:before {
-   text-decoration: none;
 		top: 0;
 		left: -20%;
 	}
@@ -54,8 +53,8 @@
  a:hover:after,
  a:hover:before {
 		width: 150%;
-    text-decoration: none;
 	}
+
 
   @media screen and (min-width : 768px) and (max-width : 1024px) {
     width: 100%;
